--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
+    <nav>
+      <nav class="nav-center">
+        <h2 id="title-color">counter</h2>
+      </nav>
+    </nav>
+    <main>
+      <div class="container">
+        <h2>counter</h2>
+        <span class="value">0</span>
+        <button type="button" class="btn decrease">decrease</button>
+        <button type="button" class="btn reset">reset</button>
+        <button type="button" class="btn increase">increase</button>
+      </div>
+    </main>
     <!-- Javascript -->
     <script src="./script.js"></script>
   </body>
